--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,6 @@ install:
   - chmod +x gradlew
 
 build_script:
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+#  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
   - chmod +x gradlew
   - ./gradlew test -Dselenide.headless=true
