--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,19 +1,33 @@
-image: Ubuntu  # образ для сборки
+name: Java CI with Gradle
 
-stack: jdk 11  # версия JDK
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
-branches:
-  only:
-    - master  # ветка git
+permissions:
+  contents: read
+jobs:
+  build:
 
-build: off  # будем использовать свой скрипт сборки
+    runs-on: ubuntu-latest   # образ для сборки
 
-install:
-  # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-card-delivery.jar &
-  - chmod +x gradlew
-
-build_script:
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
-  - chmod +x gradlew
-  - ./gradlew test -Dselenide.headless=true
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Run SUT
+        run:  java -jar ./artifacts/app-card-delivery.jar & sleep 10
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build witch Gradle
+        run: ./gradlew test --info
