--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,33 +1,18 @@
-name: Java CI with Gradle
+image: Ubuntu  # образ для сборки
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+stack: jdk 11  # версия JDK
 
-permissions:
-  contents: read
-jobs:
-  build:
+branches:
+  only:
+    - master  # ветка git
 
-    runs-on: ubuntu-latest   # образ для сборки
+build: off  # будем использовать свой скрипт сборки
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Run SUT
-        run:  java -jar ./artifacts/app-card-delivery.jar & sleep 10
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build witch Gradle
-        run: ./gradlew test --info
+install:
+  # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-card-delivery.jar &
+  - chmod +x gradlew
+
+build_script:
+  - ./gradlew test --info "-Dselenide.headless=true"
+  - chmod +x gradlew
